Finished UserController API Doc
